--- a/style/sass/_carousel.scss
+++ b/style/sass/_carousel.scss
@@ -1,8 +1,11 @@
 #slideshow_area {
-    background: #81e4ed url(../images/banner_shadow.png) repeat-x;
+    background: #81e4ed url(../../images/banner_shadow.png) repeat-x;
     border-top: 1px solid #6ec2ca;
     padding: 19px 0 28px 0;
-
+    .img {
+        width: 100%;
+        height: auto;
+    }
     #slideshow_pagination {
         margin: 10px auto;
         width: 160px;
@@ -12,14 +15,14 @@
             margin: 0 9px;
 
             a {
-                background: url(../images/grey_button.png) no-repeat;
+                background: url(../../images/grey_button.png) no-repeat;
                 display: block;
                 height: 14px;
                 width: 14px;
 
             }
             .current {
-                background: url(../images/white_button.png) no-repeat;
+                background: url(../../images/white_button.png) no-repeat;
             }
         }
     }
