--- a/style/sass/_lastestwork.scss
+++ b/style/sass/_lastestwork.scss
@@ -1,9 +1,8 @@
 #latest_works {
 	margin: auto;
-	width: 1000px;
 	clear: left;
 	h3 {
-		background: url(../images/cursor_icon.png) no-repeat left;
+		background: url(../../images/cursor_icon.png) no-repeat left;
 		float: left;
 		font-size: 15px;
 		font-weight: bold;
@@ -49,17 +48,17 @@
 }
 
 #work01 {
-    background: url(../images/latest_work01.jpg) no-repeat;
+    background: url(../../images/latest_work01.jpg) no-repeat;
 }
 
 #work02 {
-    background: url(../images/latest_work02.jpg) no-repeat;
+    background: url(../../images/latest_work02.jpg) no-repeat;
 }
 
 #work03 {
-    background: url(../images/latest_work03.jpg) no-repeat;
+    background: url(../../images/latest_work03.jpg) no-repeat;
 }
 
 #work04 {
-    background: url(../images/latest_work04.jpg) no-repeat;
+    background: url(../../images/latest_work04.jpg) no-repeat;
 }
