--- a/style/sass/_reset.scss
+++ b/style/sass/_reset.scss
@@ -5,8 +5,9 @@ body {
 }
 
 .container{
-    margin: auto;
-    width: 1000px;
+    width: 90%;
+	margin: auto;
+    max-width: 1000px;
 }
 html, body, div, span,
 h1, h2, h3, h4, h5, h6, p,
