--- a/style/sass/_header.scss
+++ b/style/sass/_header.scss
@@ -1,8 +1,21 @@
 #header {
     background: #e8ebf1;
     height: 120px;
+    position: relative;
 }
 
+h1 {
+    float: left;
+    margin-top: 37px;
+
+    a {
+        background: url(../../images/logo.png) no-repeat;
+        display: block;
+        height: 37px;
+        text-indent: -9999px;
+        width: 148px;
+    }
+}
 
 #main_menu {
     float: right;
@@ -31,29 +44,6 @@
                 border-top: 5px solid #2aacc8;
             }
         }
-    }
-
-
-    @include responsive(tablet) {
-        #header {
-            position: relative;
-        }
-
-        .header_button {
-            display: block;
-        }
-
-        .list {
-            background-color: #e8ebf1 ;
-            width: 100%;
-            float: none;
-            display: flex;
-            flex-direction: column;
-            position: absolute;
-            top: 150px;
-            left: 0;
-        }
-
     }
 
     .second_list {
@@ -93,12 +83,12 @@
         }
 
         .main_menu_first {
-            background: url(../images/arrow_down.png) no-repeat 92%;
+            background: url(../../images/arrow_down.png) no-repeat 92%;
             padding-right: 23px;
         }
 
         &:hover .main_menu_first {
-            background: #fff url(../images/arrow_down.png) no-repeat 92%;
+            background: #fff url(../../images/arrow_down.png) no-repeat 92%;
             border-top: 5px solid #2aacc8;
             color: #2aacc8;
         }
@@ -107,17 +97,41 @@
     .main_current {
         border-top: 5px solid #2aacc8;
     }
-}
 
-h1 {
-    float: left;
-    margin-top: 37px;
+    @include responsive(tablet) {
+        .header_button {
+            display: block;
+        }
 
-    a {
-        background: url(../images/logo.png) no-repeat;
-        display: block;
-        height: 37px;
-        text-indent: -9999px;
-        width: 148px;
+        .list {
+            background-color: #dfdfe2;
+            float: none;
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            position: absolute;
+            width: 100%;
+            padding: 20px;
+            gap: 20px;
+            top: 120px;
+            left: 0px;
+            opacity: 1;
+            .first_list {
+                border-bottom: 1px solid rgba(44, 43, 43, 0.122);
+                padding-bottom: 10px;
+            }
+        }
+
+        .with_dropdown {
+            ul {
+                top: -12px;
+                left: 60%;
+            }
+        }
+
+        .toggle {
+            display: none;
+            opacity: 0;
+        }
     }
 }
