--- a/style/sass/_testimonials.scss
+++ b/style/sass/_testimonials.scss
@@ -4,7 +4,7 @@
     width: 430px;
 
     h3 {
-        background: url(../images/speechcloud_icon.png) no-repeat left;
+        background: url(../../images/speechcloud_icon.png) no-repeat left;
         font-size: 15px;
         font-weight: bold;
         height: 18px;
@@ -29,7 +29,7 @@
     margin-bottom: 40px;
 
     h3 {
-        background: url(../images/people_icon.png) no-repeat left;
+        background: url(../../images/people_icon.png) no-repeat left;
         font-size: 15px;
         font-weight: bold;
         height: 16px;
@@ -49,14 +49,12 @@
     }
 }
 #download {
-	margin: auto;
-	width: 1000px;
+	
 	background: #e8fcfe;
 	border: 1px solid #81e4ed;
 	clear: both;
 	height: 78px;
 	padding: 30px 30px;
-	width: 940px;
 	p {
 		color: #363636;
 		float: left;
@@ -65,7 +63,7 @@
 		width: 608px;
 	}
 	a {
-		background: url(../images/download_button.png) no-repeat;
+		background: url(../../images/download_button.png) no-repeat;
 		display: block;
 		color: #0d0707;
 		font-size: 18px;
@@ -79,4 +77,17 @@
 			color: #fff;
 		}
 	}
+}
+@include responsive (tablet) {
+    #download {
+        width: 90%;
+        padding: 15px 15px;
+        height: 200px;
+        p{
+            width: 90%;
+        }
+        a{
+            width: 50%;
+        }
+    }
 }
